--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -73,6 +73,7 @@
         android:padding="30dp">
 
         <Button
+            android:id="@+id/bubble_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Inbox"
